<?xml version="1.0" encoding="utf-8"?>

 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fillViewport="false">

     <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".ProductDetailsActivity"
         tools:showIn="@layout/activity_product_details">

         <ImageView
             android:id="@+id/imageView"
             android:layout_width="162dp"
             android:layout_height="143dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="50dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:adjustViewBounds="true"
             android:contentDescription="@string/todo"
             android:cropToPadding="true"
             app:layout_constraintBottom_toTopOf="@id/productTitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_launcher_background" />

         <TextView
             android:id="@+id/productTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
             android:text="@string/string_textview"
             android:textStyle="bold"
             android:textColor="#000"
             android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@id/horizontalScrollView"
             app:layout_constraintEnd_toEndOf="@+id/horizontalScrollView"
             app:layout_constraintStart_toStartOf="@+id/horizontalScrollView"
             app:layout_constraintTop_toBottomOf="@id/imageView" />

         <ScrollView
             android:id="@+id/horizontalScrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="36dp"
             android:layout_marginLeft="36dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="36dp"
             android:layout_marginRight="36dp"
             android:scrollbars="vertical"
             android:fillViewport="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/productTitle">

             <TableLayout
                 android:id="@+id/tableLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="16dp"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/imageView"
                 app:layout_constraintStart_toStartOf="@+id/imageView"
                 app:layout_constraintTop_toBottomOf="@+id/imageView">

                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">

                     <TextView
                         android:id="@+id/productId"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="@string/product_id"
                         android:textStyle="bold"
                         android:textColor="#000"
                         tools:layout_editor_absoluteX="43dp"
                         tools:layout_editor_absoluteY="190dp" />

                     <TextView
                         android:id="@+id/productIdValue"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:textColor="#000"
                         android:width="0dip"
                         android:text="@string/textview"
                         tools:layout_editor_absoluteX="204dp"
                         tools:layout_editor_absoluteY="173dp" />

                 </TableRow>

                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">

                     <TextView
                         android:id="@+id/productShortDesc"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="@string/short_desc"
                         android:textStyle="bold"
                         android:textColor="#000"
                         tools:layout_editor_absoluteX="43dp"
                         tools:layout_editor_absoluteY="190dp" />

                     <TextView
                         android:id="@+id/productShortDescValue"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:textColor="#000"
                         android:width="0dip"
                         android:text="@string/textview"
                         tools:layout_editor_absoluteX="204dp"
                         tools:layout_editor_absoluteY="173dp" />

                 </TableRow>

                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">

                     <TextView
                         android:id="@+id/productLongDesc"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="@string/long_desc"
                         android:textStyle="bold"
                         android:textColor="#000"
                         tools:layout_editor_absoluteX="43dp"
                         tools:layout_editor_absoluteY="190dp" />

                     <TextView
                         android:id="@+id/productLongDescValue"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:textColor="#000"
                         android:width="0dip"
                         android:text="@string/textview"
                         tools:layout_editor_absoluteX="204dp"
                         tools:layout_editor_absoluteY="173dp" />

                 </TableRow>

                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">

                     <TextView
                         android:id="@+id/productPrice"
                         android:layout_width="120dp"
                         android:layout_height="match_parent"
                         android:text="@string/price"
                         android:textStyle="bold"
                         android:textColor="#000"
                         tools:layout_editor_absoluteX="43dp"
                         tools:layout_editor_absoluteY="190dp" />

                     <TextView
                         android:id="@+id/productPriceValue"
                         android:layout_width="180dp"
                         android:layout_height="match_parent"
                         android:textColor="#000"
                         android:text="@string/textview"
                         tools:layout_editor_absoluteX="204dp"
                         tools:layout_editor_absoluteY="173dp" />

                 </TableRow>

                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">

                     <TextView
                         android:id="@+id/productReviewRating"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="@string/review_rating"
                         android:textStyle="bold"
                         android:textColor="#000"
                         tools:layout_editor_absoluteX="43dp"
                         tools:layout_editor_absoluteY="190dp" />

                     <TextView
                         android:id="@+id/productReviewRatingValue"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:textColor="#000"
                         android:text="@string/textview"
                         tools:layout_editor_absoluteX="204dp"
                         tools:layout_editor_absoluteY="173dp" />

                 </TableRow>

                 <TableRow
                     android:layout_width="331dp"
                     android:layout_height="match_parent">

                     <TextView
                         android:id="@+id/productReviewCount"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="@string/review_count"
                         android:textStyle="bold"
                         android:textColor="#000"
                         tools:layout_editor_absoluteX="43dp"
                         tools:layout_editor_absoluteY="190dp" />

                     <TextView
                         android:id="@+id/productReviewCountValue"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:textColor="#000"
                         android:text="@string/textview"
                         tools:layout_editor_absoluteX="204dp"
                         tools:layout_editor_absoluteY="173dp" />

                 </TableRow>

                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">

                     <TextView
                         android:id="@+id/productInStock"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="@string/in_stock"
                         android:textStyle="bold"
                         android:textColor="#000"
                         tools:layout_editor_absoluteX="43dp"
                         tools:layout_editor_absoluteY="190dp" />

                     <TextView
                         android:id="@+id/productInStockValue"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:textColor="#000"
                         android:text="@string/textview"
                         tools:layout_editor_absoluteX="204dp"
                         tools:layout_editor_absoluteY="173dp" />

                 </TableRow>

             </TableLayout>

         </ScrollView>

     </android.support.constraint.ConstraintLayout>

</ScrollView>
